feat: LangGraph & LangSmith 기반 구조 구축
- LangGraph, LangSmith, LangChain 패키지 추가
- uv를 통한 현대적 패키지 관리 도입
- LLM 서비스에 스트리밍 지원 추가
- HeuristicLLMService 제거로 코드 품질 향상
- OpenAI API 키 필수화 및 에러 처리 개선
- LangSmith 통합으로 LLM 실행 추적 지원
- 애플리케이션 시작 시 LangSmith 자동 설정

Phase 1 완료: 기본 구조 및 의존성 설정

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ LLM_MODEL=gpt-5-nano
 EMBEDDING_PROVIDER=auto
 EMBEDDING_MODEL=text-embedding-3-small
 
+# LangSmith (Optional - for debugging and monitoring)
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
+LANGCHAIN_API_KEY=
+LANGCHAIN_PROJECT=ai-interview-coach
+
 # Database (Postgres + pgvector)
 PGVECTOR_ENABLED=true
 PG_HOST=db
